trunk/Archive2/36/de9b3117eecee0/main.cpp
#include <memory>

class A
{
public:
  std::unique_ptr<int> pint;
};

int main()
{
  A a;
  A b = a;  
}